--- a/pages/product/flooring/flooring.wxss
+++ b/pages/product/flooring/flooring.wxss
@@ -29,7 +29,7 @@ font-size: 24rpx;
 width: 28rpx;
 height: 30rpx;
 position: relative;
-top:5rpx;
+top: 10rpx;
 }
 .plate{
 width: 100%;
@@ -43,8 +43,8 @@ height: 120rpx;
 }
 
 .scroll-view-item_H{
-    width: 20%;
-    padding:0  5% 0 8%; 
+    width: 10%;
+    padding:0 5%; 
     text-align: left;
     display: inline-block;
     font-size: 28rpx;
@@ -53,8 +53,34 @@ height: 120rpx;
     position: relative;
 }
 
+.filter {
+  width:50rpx;
+  height:25rpx;
+  position:fixed;
+  right:0;
+  top:130rpx;
+  background:white;
+  padding:20rpx 40rpx ;
+}
+
+.filter_item{
+  text-align: center;
+  border-top: 2rpx solid #e4e4e4;
+  height: 100rpx;
+  position: absolute;
+  z-index: 999;
+  background: white;
+  width: 100%;
+}
+.filter_item > button{
+  margin: 20rpx 30rpx;
+  color: #555;
+  font-size: 28rpx;
+  border: 2rpx solid #c1c1c1;
+}
+
 .scroll-view_V {
-  height: 880rpx;
+  height: 980rpx;
   background-color: #f4f4f4;
 }
 
@@ -136,8 +162,8 @@ height: 120rpx;
   padding-top: 60rpx;
 }
 .detail-content image {
-   width: 220rpx;
-   height: 220rpx;
+   width: 200rpx;
+   height: 200rpx;
    float: left;
  }
  .detail-content view{
@@ -147,6 +173,38 @@ height: 120rpx;
    color: #555;
    line-height: 45rpx;
  }
+
+ .detail-pay,.detail-money{
+   clear: both;
+   height: 50rpx;
+   width: 100%;
+   padding:10rpx;
+   font-size: 28rpx;
+   color: #555;
+   line-height: 50rpx;
+ }
+ .detail-pay{
+     border-top: 2rpx solid #e4e4e4;
+      margin-top: 30rpx;
+ }
+ .detail-money{
+    border-bottom: 2rpx solid #e4e4e4;
+ }
+
+ .cost{
+   font-size: 48rpx;
+   color: #e62129;
+   line-height: 40rpx;
+   padding-right: 10rpx;
+ }
+
+ .left{
+   float: left;
+ }
+ .right{
+   float: right;
+ }
+
 
 .no-use{
   background: #888;
@@ -163,17 +221,4 @@ height: 120rpx;
   padding-top: 100rpx;
   font-size: 48rpx;
   text-align: center;
-}
-
-#desc{
-   font-size: 28rpx;
-   color: #555;
-   text-align: left;
-}
-.active_item{
-  color: #e62129
-}
-
-.normal{
-  color: #555;
 }
