--- a/pages/index/recharge/recharge.wxml
+++ b/pages/index/recharge/recharge.wxml
@@ -1,7 +1,7 @@
 <view class="recharge">
   <view class="recharge-title">充值数量:</view>
   <view class="recharge-btn">
-    <button size="mini" wx:for="{{cost}}" data-money="{{item}}" bindtap="wantPay">{{item}}云豆</button>
+    <button size="mini" wx:for="{{cost}}" data-money="{{item.price}}" bindtap="choosePay"class="{{item.isChecked?'active':''}}">{{item.price}}云豆</button>
   </view>
  <view class="recharge-title">应付金额:</view>
   <view class="recharge-money">
@@ -13,9 +13,9 @@
         <checkbox value="{{item.name}}" checked="{{item.checked}}"/>
         <text>同意</text>
       </label>
-      <text class="recharge-pro"> 《云购买协议》</text>
+      <text class="recharge-pro" bindtap="gotoProtocol"> 《云购买协议》</text>
     </checkbox-group>
-    <button type="primary">立即充值</button>
+    <button type="primary" disabled="{{!agree}}">立即充值</button>
   </view>
 </view>
 
