--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,7 +4,7 @@
   <text class="user_name">{{userInfo.nickName}}</text>
   <view class="now_money">
      <image src='./img/dou.png' class='now_dou'></image>
-      <text>{{user.balance}}</text>
+      <text>{{ownMoney}}</text>
   </view>
 </view>
 <view class="yundou">
@@ -32,12 +32,11 @@
   <view class='point_to'></view>
   <view class='login_content'>
     <text class='day_title'>累计签到天数: </text>
-    <text class='day'>{{user.checkInCount}}</text>
+    <text class='day'>1</text>
   </view>
   <view class='yun_number'>
     <image src='./img/dou.png' class='dou'></image>
-    <text>*{{user.checkInCount}}</text>
+    <text>*{{reward}}</text>
   </view>
-  <button wx:if="{{user.checked === true}}" class='submit' bindtap="key" disabled="{{isRecieved}}">{{word}}</button>
-  <button wx:else class='submit' disabled="true">已领取</button>
+  <button class='submit' bindtap="receive" disabled="{{isRecieved}}">{{word}}</button>
 </view>
