--- a/pages/index/check-product-color/check-product-color.wxml
+++ b/pages/index/check-product-color/check-product-color.wxml
@@ -1,21 +1,21 @@
 <view class="sub_header">
-  <view wx:for="{{header}}" data-hi="{{item}}" bindtap="seleSubmit" class='{{item.seleClass}}'>
+  <view wx:for="{{header}}" data-hi="{{item}}" bindtap="seleSubmit" class="{{item.seleClass}}">
     <text>{{item.name}}</text>
   </view>
 </view>
 
  <!- 没有提交实景图 -->
-<view class='no_data' wx:if="{{productList.length === 0}}">
+<view class='no_data' wx:if="{{showProductList.length === 0}}">
   <image mode="widthFix" src="./../img/submit_no.png"></image>
 </view>  
 
 
 <view class="data_have">
   <!--已提交  -->
-  <block wx:if="{{productList.length > 0}}">
+  <block wx:if="{{showProductList.length > 0}}">
     <block wx:if="{{seleClass.name == '已提交'}}">
       <view class="data_list" wx:for="{{showProductList}}">
-        <view class='data_text pass_no'>
+        <view class="data_text pass_no">
           <view>
             <text>{{item.prodcutCode}}</text>
           </view>
@@ -25,6 +25,7 @@
           <view>
             <text>{{item.createTime}}</text>
             <text wx:if="{{item.state === 'approving'}}">审核中</text>
+            <text wx:if="{{item.state === 'denied'}}" class='denied'>审核失败</text>
           </view>
         </view>
       </view> 
@@ -32,10 +33,10 @@
   </block>
 
   <!--审核通过  -->
-  <block wx:if="{{productList.length > 0}}">
+  <block wx:if="{{showProductList.length > 0}}">
     <block wx:if="{{seleClass.name == '审核通过'}}">
       <view class="data_list pass">
-        <view class='data_text'>
+        <view class="data_text">
           <view>
             <text>{{item.prodcutCode}}</text>
           </view>
