--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,7 +4,10 @@
   <text class="user_name">{{userInfo.nickName}}</text>
   <view class="now_money">
      <image src='./img/dou.png' class='now_dou'></image>
-      <text>{{ownMoney}}</text>
+      <text>{{user.balance}}</text>
+  </view>
+  <view class='animation' animation="{{animationDay}}">
+      <text>+{{user.checkInCount}}</text>
   </view>
 </view>
 <view class="yundou">
@@ -22,7 +25,6 @@
     <image src='./img/select.png' class='yun_img'></image>
   </view>
 </view>
-
 <view class='login_in_header'>
   <view></view>
   <text>签到</text>
@@ -32,11 +34,12 @@
   <view class='point_to'></view>
   <view class='login_content'>
     <text class='day_title'>累计签到天数: </text>
-    <text class='day'>1</text>
+    <text class='day'>{{user.checkInCount}}</text>
   </view>
   <view class='yun_number'>
     <image src='./img/dou.png' class='dou'></image>
-    <text>*{{reward}}</text>
+    <text>*{{user.checkInCount}}</text>
   </view>
-  <button class='submit' bindtap="receive" disabled="{{isRecieved}}">{{word}}</button>
+  <button wx:if="{{user.checked === false}}" class='submit' bindtap="key" disabled="{{isRecieved}}">{{word}}</button>
+  <button wx:else class='submit' disabled="true">已领取</button>
 </view>
