--- a/pages/index/submitScene/submitScene.wxml
+++ b/pages/index/submitScene/submitScene.wxml
@@ -5,7 +5,7 @@
   </picker>
 </view>
 <view class="sub">
-    <view class="sub-type">详细地址:</view>
+    <view class="sub-type">小区名字:</view>
     <input  class="sub-content" value="{{address}}" bindinput="inputAddress"  placeholder="例如:湘江中路xx小区"/>
 </view>
 <view class="sub">
