add已拥有-未拥有

--- a/pages/articles/articles.wxml
+++ b/pages/articles/articles.wxml
@@ -6,7 +6,7 @@
 </view>
 <view class="plate">
 </view>
-<view class="article" wx:for="{{seleArticles}}">
+<view class="article" wx:key wx:for="{{seleArticles}}">
   <view class="pal_for"></view>
   <image class="article_img" src="{{item.titleImg}}" data-id="{{item.id}}" bindtap="getoDetails"/>
   <view class="article_hidden">
