--- a/pages/index/check-product-color/check-product-color.wxss
+++ b/pages/index/check-product-color/check-product-color.wxss
@@ -5,9 +5,10 @@
   display: flex;
   display: -webkit-flex;
   width: 320rpx;
-  height: 60rpx;
+  height: 68rpx;
   margin: 30rpx auto 0;
-  border: 1px solid #c1c1c1;
+  border: 1rpx solid #c1c1c1;
+  padding: 0;
 }
 .sub_header .seleClass{
   background-color: red;
@@ -17,8 +18,9 @@
 }
 .sub_header view{
   width: 160rpx;
-  height: 100%;
+  height: 64rpx;
   text-align: center;
+  padding: 0;
 }
 .sub_header text{
   font-size: 32rpx;
