--- a/pages/index/recharge/recharge.wxml
+++ b/pages/index/recharge/recharge.wxml
@@ -1,7 +1,7 @@
 <view class="recharge">
-  <view class="recharge-title">充值数量:</view>
+  <view class="recharge-title">充值云豆:</view>
   <view class="recharge-btn">
-    <button size="mini" wx:for="{{cost}}" data-money="{{item.price}}" data-detail="{{item.detail}}" bindtap="choosePay"class="{{item.isChecked?'active':''}}">{{item.price/100}}云豆</button>
+     <button size="mini" wx:for="{{cost}}" data-money="{{item.price}}" data-detail="{{item.detail}}" bindtap="choosePay"class="{{item.isChecked?'active':''}}">{{item.show}}</button> 
   </view>
  <view class="recharge-title">应付金额:</view>
   <view class="recharge-money">
